2006-08-10	tsch

	* Cairo.pm, NEWS, README: Beta release 0.91.

2006-08-10	tsch

	* Cairo.xs, CairoFont.xs, CairoPattern.xs, CairoSurface.xs,
	MakeHelper.pm, Makefile.PL, cairo-perl-private.h, t/Cairo.t,
	t/CairoFont.t, t/CairoPattern.t, t/CairoSurface.t: Make it
	possible to compile and run the bindings against cairo 1.0.x.  Use
	a package lookup table for patterns and surfaces to work around
	the lack of type accessors.  Add version guards around things that
	were introduced in 1.2.0.

	* CairoSurface.xs: Use OUTLIST for
	cairo_surface_get_device_offset.

	* CairoPattern.xs, CairoSurface.xs, cairo-perl-private.h: Rename
	cair_perl_set_isa to cairo_perl_set_isa.  Doh!

	* t/CairoSurface.t: Explicitly clear the image surface on cairo
	1.0.x before writing it out since 1.0.x doesn't do it for us.  Use
	lexical surface variables to make sure they get destroyed before
	execution ends which in turn makes sure all tests inside callbacks
	are run before Test::More checks if reality matches the test plan.

2006-07-15	tsch

	* Cairo.pm, NEWS, README: Beta release 0.90.

2006-07-15	tsch

	* Cairo.pm: Update existing, add new documentation.

	* TODO: Update.

2006-07-15	tsch

	* Cairo.xs: Remove Cairo::HAS_XLIB_SURFACE and HAS_FT_FONT.

	* Cairo.pm, Cairo.xs, CairoPattern.xs, CairoSurface.xs,
	cairo-perl-private.h: Add cairo_perl_set_isa and use it for
	surfaces and patterns.

	* CairoSurface.xs, Makefile.PL, cairo-perl.h, t/CairoSurface.t:
	Add support for svg surfaces if available.

	* t/CairoSurface.t: Remove TODO block and revert workaround
	related to the weird unknown surface types.  It's been fixed
	upstream: https://bugs.freedesktop.org/show_bug.cgi?id=7322

2006/07/02	tsch

	* Makefile.PL: Require cairo 1.2.0.  Add CAIRO_FORMAT_RGB16_565.

	* Cairo.pm, CairoFont.xs: Cosmetical changes.

	* Cairo.xs: Add Cairo::VERSION and Cairo::VERSION_ENCODE.

	* t/CairoSurface.t: Shuffle a few tests around to avoid some
	strange singularities.

2006/06/15	tsch
