@@ -1,3 +1,10 @@
+2006-08-11	tsch
+
+	* CairoSurface.xs: Patch from Yaakov S puts version guards around
+	a few PDF and PS functions that appeared in 1.2.0.
+
+	* t/CairoSurface.t: Do the same for the corresponding tests.
+
 2006-08-10	tsch
 
 	* Cairo.pm, NEWS, README: Beta release 0.91.
